k8s/bar-deployment.yaml
# bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar-container
        image: hashicorp/http-echo
        args:
        - "-text=bar"
        ports:
        - containerPort: 80
