k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest  # Ensure latest image version
          imagePullPolicy: Always        # Force pull the latest image
      imagePullSecrets:
        - name: my-registry-secret  # Use this if pulling from a private registry
